# ChangeLog for app-emulation/qemu
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/qemu/ChangeLog,v 1.282 2014/08/08 14:22:42 vapier Exp $

  08 Aug 2014; Mike Frysinger <vapier@gentoo.org> qemu-2.0.0-r1.ebuild,
  qemu-2.1.0.ebuild, qemu-9999.ebuild:
  Require new enough libnfs #519226 by Mirko Guenther.

  05 Aug 2014; Mike Frysinger <vapier@gentoo.org> metadata.xml,
  qemu-2.1.0.ebuild, qemu-9999.ebuild:
  Add USE=pin-upstream-blobs so people can opt to use any version of
  seabios/etc... on their local systems.

  05 Aug 2014; Mike Frysinger <vapier@gentoo.org> qemu-2.1.0.ebuild,
  qemu-9999.ebuild:
  Unify configure lists so that we disable all the softmmu flags when building
  the user targets to avoid automagic deps leaking in.

  05 Aug 2014; Mike Frysinger <vapier@gentoo.org> qemu-2.0.0-r1.ebuild,
  qemu-2.1.0.ebuild, qemu-9999.ebuild:
  Add USE=infiniband to control librdma automagic dep.

  05 Aug 2014; Mike Frysinger <vapier@gentoo.org> metadata.xml,
  qemu-2.1.0.ebuild, qemu-9999.ebuild:
  Add USE=numa to control numactl automagic dep.

  05 Aug 2014; Mike Frysinger <vapier@gentoo.org> metadata.xml,
  qemu-2.0.0-r1.ebuild, qemu-2.1.0.ebuild, qemu-9999.ebuild:
  Add USE=lzo/snappy to control liblzo/snappy automagic deps.

  05 Aug 2014; Mike Frysinger <vapier@gentoo.org> metadata.xml,
  qemu-2.0.0-r1.ebuild, qemu-2.1.0.ebuild, qemu-9999.ebuild:
  Add USE=nfs to control libnfs automagic dep.

  05 Aug 2014; Mike Frysinger <vapier@gentoo.org> metadata.xml,
  qemu-2.0.0-r1.ebuild, qemu-2.0.0.ebuild, qemu-2.1.0.ebuild, qemu-9999.ebuild:
  Control quorum via USE=tls since it also relies on gnutls.

  04 Aug 2014; Mike Frysinger <vapier@gentoo.org> files/qemu-binfmt.initd-r1:
  actually use the new $QEMU_BINFMT_FLAGS

*qemu-2.1.0 (04 Aug 2014)

  04 Aug 2014; Mike Frysinger <vapier@gentoo.org> +qemu-2.1.0.ebuild,
  files/qemu-binfmt.initd-r1: