@@ -33,26 +33,26 @@ EBUILD qemu-1.6.1.ebuild 17742 SHA256 93d4b5c0abe3171f4c3e1836d64f296eb125ef9c1d
 EBUILD qemu-1.6.2.ebuild 17740 SHA256 f41910723e8c7b26351d8f74cfbf76ab4efc26e1d773bafcff6eae81c8caff0a SHA512 a93596e46df82e7aaad430e4458e16c61a43f4860e32e5c7456223b571e13a182b1099bbad3d82eadc3b115b2f40a88b3fac4e80a4ecc6f5f31c27f81523e53e WHIRLPOOL 62b1bfc3cc54bfacc849b8fac63c894dee6c0a6ace4dbec745132accd59f439c2aff0604de33fe57a1ac79b1afebcd4fd7f388506f23988297459e7cb86b0d01
 EBUILD qemu-1.7.0.ebuild 17679 SHA256 beb978b28d6659537cf3728f47e3676e30de84ff16f9b227e4c9cd8289291e7a SHA512 e533f97415e6f3839da4df3f5b7d684beafcfc1e5288949c547b9cb4ca608ae2a7956da54fea9dcc4b233245e62fa962b37ea961de1c96cb17eb6b05087d9a1e WHIRLPOOL 9475909bf46f03445e7a959baa272d42304696fc74d17dd78b12a77db8e10965dbb39468bcaa2095aee6ab39cada2ad4181856dc3d610c4d0200c1f75a70caac
 EBUILD qemu-1.7.1.ebuild 17679 SHA256 5f1210b57f7b0c78f7f800a4945e7a5705bd92ccd7badfd41269034235ef3940 SHA512 2d596e280f3b2c312df5448109534043ce27038529a22cd068c6a5973e44e0f8b955b358883b007c62d3cc02374412d31084e3c2eb55abeb1d55ae23b4d46bf0 WHIRLPOOL 75fd489fab0857a3bd1728a0212c3d6690eb8acb159fb002115e575f1a7747374f1a04696374af830d5a3af6035cde30dbc2ef698c71ffd96a1dd7bb64309ed7
-EBUILD qemu-2.0.0-r1.ebuild 18127 SHA256 55638d8d384b06c6bad69ce2db267b56472098490fe096fe1531d3394db5d2d8 SHA512 25f8964c7f9b6fa606b627e98f885ab75cd1f059b70c70c10b9136b9aa18dc54ca3b64bd730a63d75315bdb0bc523a57618f1438bc337aca7bddb5034974dd47 WHIRLPOOL 46fc3ee244026a7150b43303bf117e6c58aae1400a4ec0e62f7ee618d072b520891ccc24cfc5f0d65d2d6a3e5c79c5f6688d9c5fb80b1952c5925a7ce3529522
+EBUILD qemu-2.0.0-r1.ebuild 18257 SHA256 840ef9d26e3d964f22bdabec88930ed082467b1f56ea915eda2b4a7a013dd2a7 SHA512 8525b69ba2fd5f282a471bcefd2dbb18581f6b87f1f8fa1b46c740a78b221035cd680d6c9c65500c9198bf584498db7124ffd4a8a2bf371a8d9d99521400111f WHIRLPOOL 63e137dada4100e2988fc35c08e9200fa7eb756046ef64f5c02766c80752ef05ddb6f6f7e292797eda799da3caea47cb7fa83982b5e1d62950659902adea929f
 EBUILD qemu-2.0.0.ebuild 17268 SHA256 65f46652d72cac72a29aff89449d76a7d43805e4f69fd0e525059a9a115d55fd SHA512 c0b5f5220bc383b9700b7d74f88a9367e883af0ff6336a7154c1e86632fa073c3188762091bc496d7f6415d068c023a1423ffd4095696fce44835e44cd70efea WHIRLPOOL 21365f0036f741034380ba4b4b6994a0db6b2aa71bec86e6f5515c883c20d60ebe86294d745df57ff33668970a9b82f38922f6e7c4bb56bc7655ac7de4f51c34
 EBUILD qemu-2.1.0.ebuild 18007 SHA256 026af0cea78e108dcebbecca5c72df8ff37d138d33df20057d57550a4a2f5fc3 SHA512 aea577f787d9e6a05ffdb6db0cd8cb77520997482368390d6fe341043ffb654e5a18946560863f8219768afa82e4ef5b6a38ce166f8514ff765f0eddbe68bd3b WHIRLPOOL 2d8047017b848ccb7f92480c1a3c777c7c510a7849258c6f8cd4da5762bfb1e4a61d16fa365b946aa97394bf790eb90eac41340fdbb4bd02698335a3f0e21817
 EBUILD qemu-9999.ebuild 18007 SHA256 fc11816806972a5a17be8e6615bf0fd4293d4fc6b79b533bb8b676892f5bc1de SHA512 b023b348ea19253130735ea387ab0294f26c998e5ca19fa99f6b4e40491aca6146a90f21362a863592c28fdc17cf8d6702478673bc489839c0e2e738291dfb3e WHIRLPOOL 02139e39a20b985284ec3400dc33420bb36f0dc0c45190ffd92a14d77c1a1114efa9fdaf4cba08079771461549469fe7a12254ede64d5e9b7a3bd95a763f4763
-MISC ChangeLog 46880 SHA256 283613896c531e6d35c6f832a66746e04ba88d6a49b9e396f442706e02cda433 SHA512 894d5cabe28066ee4611545a04d8f2deea40c64d8eb1abc4e888c4060b3ff2e2b454d96d4d6d6433e3160000263c1330ddecf8c29a5effe65890e0ca970c03be WHIRLPOOL 40bb07f55a420d886fbf842e1b310722baae0091725bea3071ebbda36aba24cd3322296acdacfd8d33eda63c64ee131d5369c13a8d4f0b642a7117bf02bc21cc
+MISC ChangeLog 47022 SHA256 8f91f072a0b87890abf952c87f2bc20b2711312fb3be9f623c93edb3e69508f7 SHA512 b2723bc6c47689c03b04d7aa3ea5dd7c4b73f8c68d844e45c82065f097a89764dc4de0b2dbfe7f911baf06bce93eb98914e4d45ba8284863630e620f69ae2901 WHIRLPOOL 197069dfb18d14cf06804c9e603102c84c0571294aa0c4ea4e78900cf95aec900baae03bbd6905885d1d5e9097fb53e4841e226825aca5eccf52ca165c18d312
 MISC metadata.xml 4040 SHA256 041a8fed054ca585f7dd1fc6b48af8e218083d165891bd6933d9c3df67937200 SHA512 db43cfd6891cfc1d0944b2c928b8cf6c39a86bf97d2556ab2d728c4dd6a01d739d7c1bad6ede4c86f8102140ac8a0fc1ec2e269f42486e19bd9238088f5e280c WHIRLPOOL d2749e5c546ac3c0d4d28da5886cbb9f09c7056f2c449c8a51f83030f3b19a8c279e8db57f12e7cbaa6d3a0c4706a55af29e6ce7671a5be2adf2c25cb9967417
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJT5N02AAoJEPGu1DbS6WIANA4P/AyvM1W9U/r8SeGH+oGn17qe
-2n3UrXs1hz+Q6Zs1pOWzdOdXp8FT1Vtl/xuNSLSgiNXn/Afp7A96KwO3NhY0ofM/
-cqo40K1e9EVoZWJj8Em4ubni46t58iYZuR2GOE/ot1mIeKaXmUltgOMtm9gM1YsU
-Kz/bsg7pnx5XMQ3B30FFSb+yAhgb0Upo+JrhAMGLa+2Ce15B+akq1sf8pcg368k+
-1ommFRiuJ41mBJjY9P0QuktIRrZVZBQ/5fHYp70BW/wmScGHjdWt0GmiWdxCDaGz
-PFNnGzrcba9qhzSyMYGW2xcM15V5TeRuSng031FKxTU1CNlX++B1A+qPgR206//d
-iY30BgqSlAyl3P/yNMToGuG9t/hTtBg3yLy5UuCDX/1F9UHir9qpZGBiV6oe9vy2
-xeLLkyKXzoeht7N5ft1Tl8Zbkap40RyM07M3oemT24OMrm6kPzhy8kY3DMhCItfm
-TxHCRxiwhGaG0ifNM6obRLcFjf4jOnKZH3WR/IGazTGeKadtHdFi7I3YXO858ugx
-wp7iRxMEtvFp1Q8xtzv0+VXJt5eiRSsz3nGLCOotbhYS8Ud4zkMLpp6gs4IsvGtV
-v1bIymRR/9aV3m67TAbcSGMQLo8+VvQ3UDbcmU5KIC/2GnNO3TOhcS6r3mU4LOgM
-s5R7yuqq82ABTTe/Pnft
-=ZkZB
+iQIcBAEBCAAGBQJT6BeCAAoJEPGu1DbS6WIAjgsP/1iGtr1VxnVt0GkDH6cCfwYo
+AlEddoUzyX4HAQkZKAw7PpQy5f21ZTxpIkqT4+sMmnuxmTYYIAsLpBFkpJjhfqKM
+k/ZaGTod9QlGGBl8YjiV536LYg44X5xfovKXRjGFvl7P1pfH8hzMBGHjY9kuYDyn
+MHhBLUZzJwAGj1Bz+LC+U4iRewFRZktXE3oCLZdw+sPsKVc11qtvxDxy/cmwYTvg
+6NodlcxlLAtddiIJTIrpzDvr/9TRxQw+6mUDSZWvp4rU0u0TA63TPd9vbY9IDFwH
+yiaz089K5khZ3XjGHLj/Cellagb7+nXR5RrZHyhde7sTQAzmjhkJHSDhN3kM/FVI
+ZpBGlugMg2/lusz+kiTOSNaESo3YaJat/SJw51x31sd3+EHWwnRwbJJM6snoScCw
+4U1hzAAWg/uJ8qo4/euoVLv+3wwHdbW8YBZV3SfoxI5ZIzCney+i08qtZ/IAfplI
+D5MujErIKfgpvxKXSEmKGGPoN3eXhOCXmHTiWAdlmOU8D1IxpcMTuL2QdbhYUo5+
+PZJLqJjXGRwZU1A93lqUo00OtuyEZZ3w/bFgsYp5LNxThSigDcSZ8O1NrA8cOJOt
+9r4f85VsQZk5Iv5mwDWnhgTW4A7yQX7wzeYAMUnuJKRRJGqbCkXYFco25Nj2B5Ms
+GRZvJQOBxwskX1D+iCTt
+=Vm7X
 -----END PGP SIGNATURE-----
