@@ -11,4 +11,4 @@ REQUIRED_USE=|| ( qemu_softmmu_targets_aarch64 qemu_softmmu_targets_alpha qemu_s
 SLOT=0
 SRC_URI=http://wiki.qemu-project.org/download/qemu-2.0.0.tar.bz2
 _eclasses_=eutils	06133990e861be0fe60c2b428fd025d9	fcaps	c247b6885e1ff14f794a0eb65fb1e8ec	flag-o-matic	75e24bac8423c515dd9c5717f08feb83	linux-info	2b8c53f6065bdee2d757472215a3088f	multibuild	46527a4656956da3d58acff72c9b59b1	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	pax-utils	51ad5130f4a69b1a118ca5296de276ae	python-r1	c820706d8b22c1d0fe215a9d4a47671d	python-utils-r1	8c66c6dabd0295878b68b40dbd0b087b	readme.gentoo	106edea5533517715013de909a333abd	toolchain-funcs	0f1760274637a138b99bb649202ea402	udev	da001465a2e939c93f7ae16947ce3438	user	f54e098dd38ba1c0847a13e685b87747	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=40cd1d9116ae2473d6b06cfb62247ab3
+_md5_=daff987d297a199ddcfe4dea4f2f0101
