@@ -1,6 +1,9 @@
 # ChangeLog for app-emulation/qemu
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/qemu/ChangeLog,v 1.282 2014/08/08 14:22:42 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/qemu/ChangeLog,v 1.283 2014/08/11 01:08:11 vapier Exp $
+
+  11 Aug 2014; Mike Frysinger <vapier@gentoo.org> qemu-2.0.0-r1.ebuild:
+  Hack lzo/snappy flags in the older release #519520 by Luis Ressel.
 
   08 Aug 2014; Mike Frysinger <vapier@gentoo.org> qemu-2.0.0-r1.ebuild,
   qemu-2.1.0.ebuild, qemu-9999.ebuild:
